@@ -1,6 +1,6 @@
 /*
  * JasperReports - Free Java Reporting Library.
- * Copyright (C) 2001 - 2014 TIBCO Software Inc. All rights reserved.
+ * Copyright (C) 2001 - 2022 TIBCO Software Inc. All rights reserved.
  * http://www.jaspersoft.com
  *
  * Unless you have purchased a commercial license agreement from Jaspersoft,
@@ -23,6 +23,8 @@
  */
 package net.sf.jasperreports.ant;
 
+import java.lang.reflect.InvocationTargetException;
+
 import org.apache.tools.ant.BuildException;
 
 import net.sf.jasperreports.engine.util.ReportUpdater;
@@ -32,7 +34,6 @@ import net.sf.jasperreports.engine.util.ReportUpdater;
  * Utility class that provides a {@link net.sf.jasperreports.engine.util.ReportUpdater ReportUpdater} 
  * implementation
  * @author Teodor Danciu (teodord@users.sourceforge.net)
- * @version $Id: UpdaterElement.java 7199 2014-08-27 13:58:10Z teodord $
  */
 public class UpdaterElement
 {
@@ -54,17 +55,10 @@ public class UpdaterElement
 			try
 			{
 				Class<?> clazz = JRAntCompileTask.class.getClassLoader().loadClass(className);
-				updater = (ReportUpdater)clazz.newInstance();
+				updater = (ReportUpdater)clazz.getDeclaredConstructor().newInstance();
 			}
-			catch (ClassNotFoundException e)
-			{
-				throw new BuildException(e);
-			}
-			catch (IllegalAccessException e)
-			{
-				throw new BuildException(e);
-			}
-			catch (InstantiationException e)
+			catch (ClassNotFoundException | IllegalAccessException | InstantiationException 
+				| NoSuchMethodException | InvocationTargetException e)
 			{
 				throw new BuildException(e);
 			}
