@@ -1,6 +1,6 @@
 /*
  * JasperReports - Free Java Reporting Library.
- * Copyright (C) 2001 - 2014 TIBCO Software Inc. All rights reserved.
+ * Copyright (C) 2001 - 2022 TIBCO Software Inc. All rights reserved.
  * http://www.jaspersoft.com
  *
  * Unless you have purchased a commercial license agreement from Jaspersoft,
@@ -23,31 +23,36 @@
  */
 package net.sf.jasperreports.data.jdbc;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.Driver;
 import java.sql.SQLException;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Properties;
-
-import net.sf.jasperreports.data.AbstractClasspathAwareDataAdapterService;
-import net.sf.jasperreports.engine.DefaultJasperReportsContext;
-import net.sf.jasperreports.engine.JRException;
-import net.sf.jasperreports.engine.JRParameter;
-import net.sf.jasperreports.engine.JRRuntimeException;
-import net.sf.jasperreports.engine.JasperReportsContext;
-import net.sf.jasperreports.engine.util.JRClassLoader;
-import net.sf.jasperreports.util.SecretsUtil;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
+import net.sf.jasperreports.data.AbstractClasspathAwareDataAdapterService;
+import net.sf.jasperreports.engine.JRDataset;
+import net.sf.jasperreports.engine.JRException;
+import net.sf.jasperreports.engine.JRParameter;
+import net.sf.jasperreports.engine.JRPropertiesUtil;
+import net.sf.jasperreports.engine.JRRuntimeException;
+import net.sf.jasperreports.engine.ParameterContributorContext;
+import net.sf.jasperreports.engine.util.JRClassLoader;
+import net.sf.jasperreports.util.SecretsUtil;
+
 /**
  * @author Teodor Danciu (teodord@users.sourceforge.net)
- * @version $Id: JdbcDataAdapterService.java 7199 2014-08-27 13:58:10Z teodord $
  */
 public class JdbcDataAdapterService extends AbstractClasspathAwareDataAdapterService 
 {
 	private static final Log log = LogFactory.getLog(JdbcDataAdapterService.class);
+	public static final String EXCEPTION_MESSAGE_KEY_PASSWORD_REQUIRED = "data.jdbc.password.required";
+	public static final String EXCEPTION_MESSAGE_KEY_INVALID_URL = "data.jdbc.invalid.url";
+	public static final String EXCEPTION_MESSAGE_KEY_CONNECTION_NOT_CREATED = "data.jdbc.connection.not.created";
 	
 	private Connection connection = null; 
 
@@ -104,17 +109,9 @@ public class JdbcDataAdapterService extends AbstractClasspathAwareDataAdapterSer
 	/**
 	 * 
 	 */
-	public JdbcDataAdapterService(JasperReportsContext jasperReportsContext, JdbcDataAdapter jdbcDataAdapter) 
+	public JdbcDataAdapterService(ParameterContributorContext paramContribContext, JdbcDataAdapter jdbcDataAdapter) 
 	{
-		super(jasperReportsContext, jdbcDataAdapter);
-	}
-
-	/**
-	 * @deprecated Replaced by {@link #JdbcDataAdapterService(JasperReportsContext, JdbcDataAdapter)}.
-	 */
-	public JdbcDataAdapterService(JdbcDataAdapter jdbcDataAdapter) 
-	{
-		this(DefaultJasperReportsContext.getInstance(), jdbcDataAdapter);
+		super(paramContribContext, jdbcDataAdapter);
 	}
 
 	public JdbcDataAdapter getJdbcDataAdapter() {
@@ -143,18 +140,18 @@ public class JdbcDataAdapterService extends AbstractClasspathAwareDataAdapterSer
 				Thread.currentThread().setContextClassLoader(getClassLoader(oldThreadClassLoader));
 				
 				Class<?> clazz = JRClassLoader.loadClassForRealName(jdbcDataAdapter.getDriver());
-				Driver driver = (Driver) clazz.newInstance();
+				Driver driver = (Driver) clazz.getDeclaredConstructor().newInstance();
 				
 //				Driver driver = (Driver) (Class.forName(
 //						jdbcDataAdapter.getDriver(), true, getClassLoader()))
-//						.newInstance();
+//						.getDeclaredConstructor().newInstance();
 
 				
 				Properties	connectProps = new Properties();
 				Map<String, String> map = jdbcDataAdapter.getProperties();
 				if(map != null)
-					for(String key: map.keySet())
-						connectProps.setProperty(key, map.get(key));
+					for (Entry<String, String> entry : map.entrySet())
+						connectProps.setProperty(entry.getKey(), entry.getValue());
 				
 
 				String password = jdbcDataAdapter.getPassword();
@@ -167,13 +164,22 @@ public class JdbcDataAdapterService extends AbstractClasspathAwareDataAdapterSer
 				
 				connection = driver.connect(jdbcDataAdapter.getUrl(), connectProps);
 				if(connection == null)
-					throw new SQLException("No suitable driver found for "+ jdbcDataAdapter.getUrl());
+				{
+					boolean urlValid = driver.acceptsURL(jdbcDataAdapter.getUrl());
+					if (!urlValid)
+					{
+						throw new JRRuntimeException(EXCEPTION_MESSAGE_KEY_INVALID_URL, 
+								new Object[] {jdbcDataAdapter.getUrl(), jdbcDataAdapter.getDriver()});
+					}
+					
+					throw new JRRuntimeException(EXCEPTION_MESSAGE_KEY_CONNECTION_NOT_CREATED, 
+							new Object[] {jdbcDataAdapter.getUrl()});
+				}
+				
+				setupConnection(jdbcDataAdapter);
 			}
-			catch (ClassNotFoundException ex){
-				throw new JRRuntimeException(ex);
-			} catch (InstantiationException e) {
-				throw new JRRuntimeException(e);
-			} catch (IllegalAccessException e) {
+			catch (ClassNotFoundException | InstantiationException | IllegalAccessException 
+				| NoSuchMethodException | InvocationTargetException e) {
 				throw new JRRuntimeException(e);
 			} finally {
 				Thread.currentThread().setContextClassLoader(oldThreadClassLoader);
@@ -182,11 +188,90 @@ public class JdbcDataAdapterService extends AbstractClasspathAwareDataAdapterSer
 		}
 		return null;
 	}
-	 
+
+	protected void setupConnection(JdbcDataAdapter dataAdapter) throws SQLException
+	{
+		JRPropertiesUtil props = JRPropertiesUtil.getInstance(getJasperReportsContext());
+		JRDataset dataset = getParameterContributorContext().getDataset();
+		
+		Boolean autoCommit = getAutoCommit(dataAdapter, props, dataset);
+		if (autoCommit != null)
+		{
+			if (log.isDebugEnabled())
+			{
+				log.debug("setting auto commit " + autoCommit + " on connection " + connection);
+			}
+			connection.setAutoCommit(autoCommit);
+		}
+		
+		Boolean readOnly = getReadOnly(dataAdapter, props, dataset);
+		if (readOnly != null)
+		{
+			if (log.isDebugEnabled())
+			{
+				log.debug("setting read only " + readOnly + " on connection " + connection);
+			}
+			connection.setReadOnly(readOnly);
+		}
+		
+		Integer transactionIsolation = getTransactionIsolation(dataAdapter, props, dataset);
+		if (transactionIsolation != null)
+		{
+			if (log.isDebugEnabled())
+			{
+				log.debug("setting transaction isolation " + transactionIsolation + " on connection " + connection);
+			}
+			connection.setTransactionIsolation(transactionIsolation);
+		}
+	}
+	
+	protected Boolean getAutoCommit(JdbcDataAdapter dataAdapter, 
+			JRPropertiesUtil props, JRDataset dataset)
+	{
+		Boolean autoCommit = dataAdapter.getAutoCommit();
+		if (autoCommit != null)
+		{
+			return autoCommit;
+		}
+		
+		return props.getBooleanProperty(dataset, JdbcDataAdapter.PROPERTY_DEFAULT_AUTO_COMMIT);
+	}
+	
+	protected Boolean getReadOnly(JdbcDataAdapter dataAdapter, 
+			JRPropertiesUtil props, JRDataset dataset)
+	{
+		Boolean readOnly = dataAdapter.getReadOnly();
+		if (readOnly != null)
+		{
+			return readOnly;
+		}
+		
+		return props.getBooleanProperty(dataset, JdbcDataAdapter.PROPERTY_DEFAULT_READ_ONLY);
+	}
+	
+	protected Integer getTransactionIsolation(JdbcDataAdapter dataAdapter, 
+			JRPropertiesUtil props, JRDataset dataset)
+	{
+		TransactionIsolation transactionIsolation = dataAdapter.getTransactionIsolation();
+		if (transactionIsolation != null)
+		{
+			return transactionIsolation.getLevel();
+		}
+		
+		String prop = props.getProperty(dataset, JdbcDataAdapter.PROPERTY_DEFAULT_TRANSACTION_ISOLATION);
+		if (prop != null && !prop.trim().isEmpty())
+		{
+			transactionIsolation = TransactionIsolation.valueOf(prop.trim());
+			return transactionIsolation.getLevel();
+		}
+		return null;
+	}
 
 	public String getPassword() throws JRException {
-		throw new JRException(
-				"This service implementation needs the password to be saved in the data adapter.");
+		throw 
+			new JRException(
+				EXCEPTION_MESSAGE_KEY_PASSWORD_REQUIRED,
+				(Object[])null);
 	}
 
 	@Override
