@@ -1,6 +1,6 @@
 /*
  * JasperReports - Free Java Reporting Library.
- * Copyright (C) 2001 - 2014 TIBCO Software Inc. All rights reserved.
+ * Copyright (C) 2001 - 2022 TIBCO Software Inc. All rights reserved.
  * http://www.jaspersoft.com
  *
  * Unless you have purchased a commercial license agreement from Jaspersoft,
@@ -29,21 +29,26 @@
 package net.sf.jasperreports.engine.design;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
-import net.sf.jasperreports.engine.DefaultJasperReportsContext;
+import org.apache.commons.collections4.map.ReferenceMap;
+
+import net.sf.jasperreports.annotations.properties.Property;
+import net.sf.jasperreports.annotations.properties.PropertyScope;
+import net.sf.jasperreports.compilers.DirectExpressionValueFilter;
+import net.sf.jasperreports.compilers.JavaDirectExpressionValueFilter;
 import net.sf.jasperreports.engine.JRException;
 import net.sf.jasperreports.engine.JRPropertiesUtil;
+import net.sf.jasperreports.engine.JRRuntimeException;
 import net.sf.jasperreports.engine.JasperReportsContext;
 import net.sf.jasperreports.engine.fill.JREvaluator;
 import net.sf.jasperreports.engine.util.JRClassLoader;
-
-import org.apache.commons.collections.map.ReferenceMap;
+import net.sf.jasperreports.properties.PropertyConstants;
 
 
 /**
  * @author Teodor Danciu (teodord@users.sourceforge.net)
- * @version $Id: JRAbstractJavaCompiler.java 7199 2014-08-27 13:58:10Z teodord $
  */
 public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 {
@@ -60,17 +65,29 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 	 * the classpath of a web application which is often reloaded.  In such
 	 * scenarios, set this property to false.
 	 */
+	@Property(
+			category = PropertyConstants.CATEGORY_FILL,
+			defaultValue = PropertyConstants.BOOLEAN_TRUE,
+			scopes = {PropertyScope.CONTEXT},
+			sinceVersion = PropertyConstants.VERSION_3_0_0,
+			valueType = Boolean.class
+			)
 	public static final String PROPERTY_EVALUATOR_CLASS_REFERENCE_FIX_ENABLED = JRPropertiesUtil.PROPERTY_PREFIX + 
 			"evaluator.class.reference.fix.enabled";
 	
+	public static final String EXCEPTION_MESSAGE_KEY_EXPECTED_JAVA_LANGUAGE = "compilers.language.expected.java";
+	public static final String EXCEPTION_MESSAGE_KEY_EXPRESSION_CLASS_NOT_LOADED = "compilers.expression.class.not.loaded";
+
 	// @JVM Crash workaround
 	// Reference to the loaded class class in a per thread map
-	private static ThreadLocal<Class<?>> classFromBytesRef = new ThreadLocal<Class<?>>();
+	private static ThreadLocal<Class<?>> classFromBytesRef = new ThreadLocal<>();
 
 
 	private static final Object CLASS_CACHE_NULL_KEY = new Object();
-	private static Map<Object,Map<String,Class<?>>> classCache = new ReferenceMap(ReferenceMap.WEAK, ReferenceMap.SOFT);
-
+	private static Map<Object,Map<String,Class<?>>> classCache = 
+		new ReferenceMap<>(
+			ReferenceMap.ReferenceStrength.WEAK, ReferenceMap.ReferenceStrength.SOFT
+			);
 	
 	/**
 	 * 
@@ -80,16 +97,13 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 		super(jasperReportsContext, needsSourceFiles);
 	}
 
-
-	/**
-	 * @deprecated Replaced by {@link #JRAbstractJavaCompiler(JasperReportsContext, boolean)}.
-	 */
-	protected JRAbstractJavaCompiler(boolean needsSourceFiles)
+	@Override
+	protected DirectExpressionValueFilter directValueFilter()
 	{
-		this(DefaultJasperReportsContext.getInstance(), needsSourceFiles);
+		return JavaDirectExpressionValueFilter.instance();
 	}
 
-
+	@Override
 	protected JREvaluator loadEvaluator(Serializable compileData, String className) throws JRException
 	{
 		JREvaluator evaluator = null;
@@ -99,7 +113,8 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 			Class<?> clazz = getClassFromCache(className);
 			if (clazz == null)
 			{
-				clazz = JRClassLoader.loadClassFromBytes(className, (byte[]) compileData);
+				CompiledClasses compiledClasses = toCompiledClasses(className, compileData);
+				clazz = loadClass(className, compiledClasses);
 				putClassInCache(className, clazz);
 			}
 			
@@ -109,14 +124,48 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 				classFromBytesRef.set(clazz);
 			}
 		
-			evaluator = (JREvaluator) clazz.newInstance();
+			evaluator = (JREvaluator) clazz.getDeclaredConstructor().newInstance();
 		}
-		catch (Exception e)
+		catch (NoSuchMethodException | InvocationTargetException | IllegalAccessException | InstantiationException e)
 		{
-			throw new JRException("Error loading expression class : " + className, e);
+			throw 
+			new JRException(
+				EXCEPTION_MESSAGE_KEY_EXPRESSION_CLASS_NOT_LOADED, 
+				new Object[]{className}, 
+				e);
 		}
 		
 		return evaluator;
+	}
+	
+	protected CompiledClasses toCompiledClasses(String className, Serializable compileData)
+	{
+		CompiledClasses classes;
+		if (compileData instanceof CompiledClasses)
+		{
+			classes = (CompiledClasses) compileData;
+		}
+		else if (compileData instanceof byte[])
+		{
+			classes = CompiledClasses.forClass(className, (byte[]) compileData);
+		}
+		else
+		{
+			throw new JRRuntimeException("Unknown compile data type " + compileData.getClass());
+		}
+		return classes;
+	}
+
+
+	protected Class<?> loadClass(String className, byte[] compileData)
+	{
+		return JRClassLoader.loadClassFromBytes(reportClassFilter, className, compileData);
+	}
+
+
+	protected Class<?> loadClass(String className, CompiledClasses classes)
+	{
+		return JRClassLoader.loadClassFromBytes(reportClassFilter, className, classes);
 	}
 	
 	
@@ -146,7 +195,7 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 		Map<String,Class<?>> contextMap = classCache.get(key);
 		if (contextMap == null)
 		{
-			contextMap = new ReferenceMap(ReferenceMap.HARD, ReferenceMap.SOFT);
+			contextMap = new ReferenceMap<>(ReferenceMap.ReferenceStrength.HARD, ReferenceMap.ReferenceStrength.SOFT);
 			classCache.put(key, contextMap);
 		}
 		contextMap.put(className, loadedClass);
