@@ -1,6 +1,6 @@
 /*
  * JasperReports - Free Java Reporting Library.
- * Copyright (C) 2001 - 2014 TIBCO Software Inc. All rights reserved.
+ * Copyright (C) 2001 - 2022 TIBCO Software Inc. All rights reserved.
  * http://www.jaspersoft.com
  *
  * Unless you have purchased a commercial license agreement from Jaspersoft,
@@ -23,19 +23,20 @@
  */
 package net.sf.jasperreports.governors;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 
 import net.sf.jasperreports.engine.JRAbstractScriptlet;
 import net.sf.jasperreports.engine.JRException;
 import net.sf.jasperreports.engine.JRPropertiesUtil;
+import net.sf.jasperreports.engine.scriptlets.DefaultScriptletFactory;
 import net.sf.jasperreports.engine.scriptlets.ScriptletFactory;
 import net.sf.jasperreports.engine.scriptlets.ScriptletFactoryContext;
 import net.sf.jasperreports.engine.util.JRClassLoader;
 
 /**
  * @author Teodor Danciu (teodord@users.sourceforge.net)
- * @version $Id: GovernorFactory.java 7199 2014-08-27 13:58:10Z teodord $
  */
 public final class GovernorFactory implements ScriptletFactory
 {
@@ -54,12 +55,10 @@ public final class GovernorFactory implements ScriptletFactory
 		return INSTANCE;
 	}
 
-	/**
-	 *
-	 */
+	@Override
 	public List<JRAbstractScriptlet> getScriplets(ScriptletFactoryContext context) throws JRException
 	{
-		List<JRAbstractScriptlet> scriptlets = new ArrayList<JRAbstractScriptlet>();
+		List<JRAbstractScriptlet> scriptlets = new ArrayList<>();
 
 		boolean maxPagesEnabled = JRPropertiesUtil.getInstance(context.getJasperReportsContext()).getBooleanProperty(context.getDataset(), MaxPagesGovernor.PROPERTY_MAX_PAGES_ENABLED, true);
 		if (maxPagesEnabled)
@@ -94,15 +93,24 @@ public final class GovernorFactory implements ScriptletFactory
 		try
 		{
 			Class<?> scriptletClass = JRClassLoader.loadClassForName(scriptletClassName);	
-			scriptlet = (JRAbstractScriptlet) scriptletClass.newInstance();
+			scriptlet = (JRAbstractScriptlet) scriptletClass.getDeclaredConstructor().newInstance();
 		}
 		catch (ClassNotFoundException e)
 		{
-			throw new JRException("Error loading scriptlet class : " + scriptletClassName, e);
+			throw 
+				new JRException(
+					DefaultScriptletFactory.EXCEPTION_MESSAGE_KEY_CLASS_LOADING_ERROR,
+					new Object[]{scriptletClassName}, 
+					e);
 		}
-		catch (Exception e)
+		catch (NoSuchMethodException | InvocationTargetException 
+			| IllegalAccessException | InstantiationException e)
 		{
-			throw new JRException("Error creating scriptlet class instance : " + scriptletClassName, e);
+			throw 
+				new JRException(
+					DefaultScriptletFactory.EXCEPTION_MESSAGE_KEY_INSTANCE_LOADING_ERROR,
+					new Object[]{scriptletClassName}, 
+					e);
 		}
 		
 		return scriptlet;
